"report check in 2018-11-11"

--- a/stureports/think-java/1amsmith1020.think-java_results.html
+++ b/stureports/think-java/1amsmith1020.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-11-06
+Run date: 2018-11-11
 <br>Student User: 1amsmith1020
 <br>Project: think-java
 <br>
@@ -404,15 +404,16 @@ Ch6Ex5.java:57: error: cannot find symbol
 	[SUCCESSFUL COMPILE] TestCh7Ex4.java
 [RUNNING] TestCh7Ex4
 -->
-Test: Chapter7, Exercise4.indexOfMax()
-	  [PASSED] Exercise4.sieve("2") 
-	  [PASSED] Exercise4.sieve("3") 
-	  [PASSED] Exercise4.sieve("4") 
-	  [PASSED] Exercise4.sieve("5") 
-	  [PASSED] Exercise4.sieve("6") 
-	  [PASSED] Exercise4.sieve("7") 
-	  [PASSED] Exercise4.sieve("8") 
-	  TEST FINISHED, PASSED: 7/7.
+
+	<br>Chapter7, Exercise4.indexOfMax()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.sieve("2")  </td><td align="left">[false, false]</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("3")  </td><td align="left">[false, false, true]</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("4")  </td><td align="left">[false, false, true, true]</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("5")  </td><td align="left">[false, false, true, true, false]</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("6")  </td><td align="left">[false, false, true, true, false, true]</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("7")  </td><td align="left">[false, false, true, true, false, true, false]</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("8")  </td><td align="left">[false, false, true, true, false, true, false, true]</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
 	[deductions=0.0]
 	
 	
@@ -440,22 +441,15 @@ Test: Chapter7, Exercise4.indexOfMax()
 	[SUCCESSFUL COMPILE] TestCh7Ex5.java
 [RUNNING] TestCh7Ex5
 -->
-Test: Chapter7, Exercise5.areFactors()
-	  [   :( ] Exercise5.areFactors("8, [4, 2, 1]"): 
-			EXPECTED: true
-			RECEIVED: false
-	  [PASSED] Exercise5.areFactors("13, [1, 12, 99]") 
-	  [   :( ] Exercise5.areFactors("26, [13, 26, 1]"): 
-			EXPECTED: true
-			RECEIVED: false
-	  [   :( ] Exercise5.areFactors("35, [5, 7]"): 
-			EXPECTED: true
-			RECEIVED: false
-	  [PASSED] Exercise5.areFactors("35, [5, 7, 34]") 
-	  [   :( ] Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]"): 
-			EXPECTED: true
-			RECEIVED: false
-	  TEST FINISHED, PASSED: 2/6.
+
+	<br>Chapter7, Exercise5.areFactors()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.areFactors("8, [4, 2, 1]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("13, [1, 12, 99]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("26, [13, 26, 1]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7, 34]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	</table><br>
 	[deductions=0.12]
 	
 	
@@ -489,32 +483,22 @@ Test: Chapter7, Exercise5.areFactors()
 	[SUCCESSFUL COMPILE] Exercise8.java
 [TESTING WITH] TestCh7Ex8
 [COMPILING] TestCh7Ex8.java
-	[SUCCESSFUL COMPILE] TestCh7Ex8.java
-[RUNNING] TestCh7Ex8
--->
-
-	<br>Chapter7, Exercise8.isAnagram()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise8.isAnagram("stop, mots")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise8.isAnagram("stop, pots")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise8.isAnagram("allen downey, well annoyed")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise8.isAnagram("flip, flop")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise8.isAnagram("ooooooh boy, oooooo hboy")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise8.isAnagram("oooooo hboy, ooooooh boy")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise8.isAnagram("now, won")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise8.isAnagram("larp test, lightning bolt")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.0]
+	[ERROR] javac failed TestCh7Ex8.java
+ ----begin compile output------- 
+TestCh7Ex8.java:68: error: cannot find symbol
+	            boolean gotBack = Exercise8.isAnagram(s1, s2);
+	                                       ^
+	  symbol:   method isAnagram(String,String)
+	  location: class Exercise8
+	1 error
 	
-	
-<--
-	[OUTPUT OK]
-
+-----------END COMPILE-------
 [SUMMARY] 
 	['Exercise5: PASSED - BUT TEST CASES FOUND SOME ERRORS'
 	 'Exercise6: PASSED - BUT TEST CASES FOUND SOME ERRORS'
-	 'Exercise8: PASSED - EXCELLENT!']
+	 'Exercise8: COMPILE ERROR (- 0.30)']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
-<b>          [SCORE] 0.76</b>
+<b>          [SCORE] 0.46</b>
 
 </pre></body></html>
