--- a/stureports/think-java/aliyaaware.think-java_results.html
+++ b/stureports/think-java/aliyaaware.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-11-06
+Run date: 2018-11-11
 <br>Student User: aliyaaware
 <br>Project: think-java
 <br>
@@ -64,8 +64,8 @@ How many seconds do you want to convert? 13 seconds = 0 hours, 0 minutes, 13 sec
 -->
 Im thinking of a number between 1-100, can you guess it?
 	Type a number : Your Guess is 13
-	THe number I was thinkin of is: 57
-	You were off by: 44
+	THe number I was thinkin of is: 52
+	You were off by: 39
 	
 <--
 	[OUTPUT OK]
@@ -262,29 +262,16 @@ Im thinking of a number between 1-100, can you guess it?
 	3
 	5
 	7
-	Test: Chapter7, Exercise4.indexOfMax()
-	  [   :( ] Exercise4.sieve("2"): 
-			EXPECTED: [false, false]
-			RECEIVED: [false, false, true]
-	  [   :( ] Exercise4.sieve("3"): 
-			EXPECTED: [false, false, true]
-			RECEIVED: [false, false, true, true]
-	  [   :( ] Exercise4.sieve("4"): 
-			EXPECTED: [false, false, true, true]
-			RECEIVED: [false, false, true, true, false]
-	  [   :( ] Exercise4.sieve("5"): 
-			EXPECTED: [false, false, true, true, false]
-			RECEIVED: [false, false, true, true, false, true]
-	  [   :( ] Exercise4.sieve("6"): 
-			EXPECTED: [false, false, true, true, false, true]
-			RECEIVED: [false, false, true, true, false, true, false]
-	  [   :( ] Exercise4.sieve("7"): 
-			EXPECTED: [false, false, true, true, false, true, false]
-			RECEIVED: [false, false, true, true, false, true, false, true]
-	  [   :( ] Exercise4.sieve("8"): 
-			EXPECTED: [false, false, true, true, false, true, false, true]
-			RECEIVED: [false, false, true, true, false, true, false, true, false]
-	  TEST FINISHED, PASSED: 0/7.
+	
+	<br>Chapter7, Exercise4.indexOfMax()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.sieve("2")  </td><td align="left">[false, false, true]</td><td bgcolor="red"><b>[false, false] </b></td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("3")  </td><td align="left">[false, false, true, true]</td><td bgcolor="red"><b>[false, false, true] </b></td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("4")  </td><td align="left">[false, false, true, true, false]</td><td bgcolor="red"><b>[false, false, true, true] </b></td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("5")  </td><td align="left">[false, false, true, true, false, true]</td><td bgcolor="red"><b>[false, false, true, true, false] </b></td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("6")  </td><td align="left">[false, false, true, true, false, true, false]</td><td bgcolor="red"><b>[false, false, true, true, false, true] </b></td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("7")  </td><td align="left">[false, false, true, true, false, true, false, true]</td><td bgcolor="red"><b>[false, false, true, true, false, true, false] </b></td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("8")  </td><td align="left">[false, false, true, true, false, true, false, true, false]</td><td bgcolor="red"><b>[false, false, true, true, false, true, false, true] </b></td></tr>
+	</table><br>
 	[deductions=0.21]
 	
 	
@@ -312,14 +299,15 @@ Im thinking of a number between 1-100, can you guess it?
 	[SUCCESSFUL COMPILE] TestCh7Ex5.java
 [RUNNING] TestCh7Ex5
 -->
-Test: Chapter7, Exercise5.areFactors()
-	  [PASSED] Exercise5.areFactors("8, [4, 2, 1]") 
-	  [PASSED] Exercise5.areFactors("13, [1, 12, 99]") 
-	  [PASSED] Exercise5.areFactors("26, [13, 26, 1]") 
-	  [PASSED] Exercise5.areFactors("35, [5, 7]") 
-	  [PASSED] Exercise5.areFactors("35, [5, 7, 34]") 
-	  [PASSED] Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]") 
-	  TEST FINISHED, PASSED: 6/6.
+
+	<br>Chapter7, Exercise5.areFactors()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.areFactors("8, [4, 2, 1]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("13, [1, 12, 99]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("26, [13, 26, 1]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7, 34]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
 	[deductions=0.0]
 	
 	
