--- a/stureports/think-java/tpipitone.think-java_results.html
+++ b/stureports/think-java/tpipitone.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-11-06
+Run date: 2018-11-11
 <br>Student User: tpipitone
 <br>Project: think-java
 <br>
@@ -69,7 +69,7 @@ How many seconds? 13 seconds is equal to 0 hours, 0 minutes, 13 seconds.
 -->
 Guess my number between 1 and 100!
 	Type a number: Your guess is: 13
-	My number was 49. You were off by 36.
+	My number was 30. You were off by 17.
 	
 <--
 	[OUTPUT OK]
@@ -248,15 +248,16 @@ Ch 4 Multadd
 	[SUCCESSFUL COMPILE] TestCh7Ex4.java
 [RUNNING] TestCh7Ex4
 -->
-Test: Chapter7, Exercise4.indexOfMax()
-	  [PASSED] Exercise4.sieve("2") 
-	  [PASSED] Exercise4.sieve("3") 
-	  [PASSED] Exercise4.sieve("4") 
-	  [PASSED] Exercise4.sieve("5") 
-	  [PASSED] Exercise4.sieve("6") 
-	  [PASSED] Exercise4.sieve("7") 
-	  [PASSED] Exercise4.sieve("8") 
-	  TEST FINISHED, PASSED: 7/7.
+
+	<br>Chapter7, Exercise4.indexOfMax()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.sieve("2")  </td><td align="left">[false, false]</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("3")  </td><td align="left">[false, false, true]</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("4")  </td><td align="left">[false, false, true, true]</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("5")  </td><td align="left">[false, false, true, true, false]</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("6")  </td><td align="left">[false, false, true, true, false, true]</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("7")  </td><td align="left">[false, false, true, true, false, true, false]</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise4.sieve("8")  </td><td align="left">[false, false, true, true, false, true, false, true]</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
 	[deductions=0.0]
 	
 	
@@ -284,14 +285,15 @@ Test: Chapter7, Exercise4.indexOfMax()
 	[SUCCESSFUL COMPILE] TestCh7Ex5.java
 [RUNNING] TestCh7Ex5
 -->
-Test: Chapter7, Exercise5.areFactors()
-	  [PASSED] Exercise5.areFactors("8, [4, 2, 1]") 
-	  [PASSED] Exercise5.areFactors("13, [1, 12, 99]") 
-	  [PASSED] Exercise5.areFactors("26, [13, 26, 1]") 
-	  [PASSED] Exercise5.areFactors("35, [5, 7]") 
-	  [PASSED] Exercise5.areFactors("35, [5, 7, 34]") 
-	  [PASSED] Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]") 
-	  TEST FINISHED, PASSED: 6/6.
+
+	<br>Chapter7, Exercise5.areFactors()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.areFactors("8, [4, 2, 1]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("13, [1, 12, 99]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("26, [13, 26, 1]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7, 34]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
 	[deductions=0.0]
 	
 	
