--- a/stureports/think-java/bethtojatjar.think-java_results.html
+++ b/stureports/think-java/bethtojatjar.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-11-06
+Run date: 2018-11-11
 <br>Student User: bethtojatjar
 <br>Project: think-java
 <br>
@@ -228,14 +228,15 @@ The amount of seconds since midnight is: 39780 seconds
 	[SUCCESSFUL COMPILE] TestCh7Ex5.java
 [RUNNING] TestCh7Ex5
 -->
-Test: Chapter7, Exercise5.areFactors()
-	  [PASSED] Exercise5.areFactors("8, [4, 2, 1]") 
-	  [PASSED] Exercise5.areFactors("13, [1, 12, 99]") 
-	  [PASSED] Exercise5.areFactors("26, [13, 26, 1]") 
-	  [PASSED] Exercise5.areFactors("35, [5, 7]") 
-	  [PASSED] Exercise5.areFactors("35, [5, 7, 34]") 
-	  [PASSED] Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]") 
-	  TEST FINISHED, PASSED: 6/6.
+
+	<br>Chapter7, Exercise5.areFactors()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.areFactors("8, [4, 2, 1]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("13, [1, 12, 99]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("26, [13, 26, 1]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7, 34]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
 	[deductions=0.0]
 	
 	
